# hyperscaled-sdk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/hyperscaled/: SKILL.md
.github/workflows/: ci.yml
hyperscaled/: __init__.py  _version.py  exceptions.py
hyperscaled/cli/: _json_error.py  account.py  backtest.py  config.py  data.py  info.py  kyc.py  main.py  miners.py  orders.py  payouts.py  positions.py  register.py  rules.py  trade.py
hyperscaled/models/: __init__.py  account.py  kyc.py  miner.py  payout.py  registration.py  rules.py  trading.py
hyperscaled/sdk/: account.py  backtest.py  base_usdc.py  client.py  config.py  data.py  kyc.py  miners.py  pairs.py  payouts.py  portfolio.py  register.py  rules.py  trading.py
planning/: Hyperscaled CLI & SDK Design V2.md  OVERVIEW.md  V1_CLI_SDK_DESIGN.md
planning/reports/: SDK-001.md  SDK-002.md  SDK-003.md  SDK-004.md  SDK-005-MINER-DISCOVERY-COMPATIBILITY.md  SDK-005.md  SDK-006.md  SDK-007.md  SDK-008.md  SDK-009.md  SDK-010.md  SDK-011.md  SDK-012.md  SDK-013.md  SDK-FOUNDATION-HARDENING.md  SDK-TP-SL.md
planning/sprints/: SPRINT_1.md  SPRINT_2.md  SPRINT_3.md
tests/: test_account.py  test_base_usdc.py  test_client.py  test_config.py  test_error_wrapping.py  test_exceptions.py  test_imports.py  test_kyc.py  test_miners.py  test_models.py  test_multi_session.py  test_payouts.py  test_portfolio.py  test_register.py  test_rules.py  test_tp_sl.py  test_trading.py  test_version.py
